# visual_novel_chat_poc

./: .gitignore  Dockerfile  README.md  pyproject.toml  text2emotions.py  visual_novel_chat (1).py  visual_novel_chat.py  waifu_config.json
tests/: conftest.py  test_ai.py  test_database.py  test_text_utils.py
visual_novel_chat/: __init__.py  __main__.py  ai.py  bot.py  config.py  constants.py  database.py  ollama.py  text_utils.py  visual_novel.py
